--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
 AIRTABLE_API_KEY=
 AIRTABLE_BASE_ID=
+AIRTABLE_DATEBASE_ID=
+AIRTABLE_SOCIAL_BASE_ID=
 AIRTABLE_TABLE_NAME=
-AUTHO_DOMAIN=
-AUTHO_SECRET=
-AUTHO_CLIENT_ID=
-COOKIE-SECRET=
+AIRTABLE_DATETABLE_NAME=
+AIRTABLE_SOCIAL_TABLE_NAME=
